tests/derive_ui/flatten_struct_in_enum.rs
#[derive(clap::Parser)]
enum Opt {
    #[command(flatten)]
    Sub(SubCmd),
}

#[derive(clap::Parser)]
struct SubCmd {}

fn main() {}
